Tag: tags/2017-03-04
---------------------
- Fixed bug where CC Slider would break other flexsliders, if Custom Video List CC was also on the same page.
- updated file_view_mode to full for video display

Tag: tags/2017-02-28
---------------------
- p-143: Isolated Video/Show in Paragraphs, i.e., added Video Content Component

Tag: tags/2017-02-19-0
---------------------
- Updated 'tz_handling' => 'date' for field: field_cmbs_event_datetime.

Tag: tags/2017-02-19
---------------------
- p-92: Add Events to Search

Tag: tags/2017-02-11
---------------------
- p-137: Following number not always accurate

Tag: tags/2017-01-30
---------------------
- p-85: Custom Video List w/ Node Context